# graduation_work

mpcc_solver/: CMakeLists.txt  note.md  package.xml
mpcc_solver/config/: mpcc.yaml
mpcc_solver/include/: config.h
mpcc_solver/launch/: mpcc.launch
mpcc_solver/src/: main.cpp
mpcc_solver/src/Spline/: arc_length_spline.cpp  arc_length_spline.h  cubic_spline.cpp  cubic_spline.h
mpcc_solver/src/config/: config.h
mpcc_solver/src/log/: log.cpp  log.h
mpcc_solver/src/map/: map.cpp  map.h
mpcc_solver/src/mpcc/: chance_constrains.cpp  constrains.cpp  dmpc.cpp  mpcc.cpp  mpcc.h  osqp_interface.cpp  osqp_interface.h
mpcc_solver/src/obstacle/: obstacle.cpp  obstacle.h
mpcc_solver/src/pid/: pid.cpp  pid.h
mpcc_solver/src/plot/: plot.cpp  plot.h
mpcc_solver/src/referenceline/: resample.cpp  resample.h  search.cpp  search.h  smooth.cpp  smooth.h
mpcc_solver/src/test/: generate_map_test.h  map.txt  plot.py
uart/: flycontroller.py  test.py  test_Send.py  threadsTracker.py
uav_simulator/map_generator/config/: map.pcd
uav_simulator/quadrotor_msgs/: CMakeLists.txt
uav_simulator/quadrotor_msgs/msg/: Theta.msg
uav_simulator/uav_simulator/config/: rviz_config.rviz  so3_controller.yaml  so3_quadrotor.yaml
uav_simulator/uav_simulator/launch/: uav_simulator.launch
vrpn_client_ros/: CMakeLists.txt
vrpn_client_ros/include/vrpn_client_ros/: vrpn_client_ros.h
vrpn_client_ros/launch/: sample.launch
vrpn_client_ros/src/: vrpn_client_ros.cpp
